# FraudLiveSystem

./: .gitattributes  .gitignore  README.md  alembic.ini  docker-compose.yml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: DEMO_SCRIPT.md  FAQ_TECHNICAL_INTERVIEW.md  INTERVIEW_CHECKLIST.md  KROKI_DOMKNIECIA_PROJEKTU.md  MASTER_SUMMARY_INTERVIEW.md  ONBOARDING_60_MIN.md  PLAN_DOMKNIECIA_PROJEKTU_CODEX.md  PODSUMOWANIE_PRAC.md  README.md  RUNBOOK_DISASTER_RECOVERY.md  RUNBOOK_DLQ_REPLAY.md  RUNBOOK_INCIDENT_RESPONSE.md  RUNBOOK_OBSERVABILITY_TRACING.md  RUN_LOCAL.md  STAN_PROJEKTU_I_FLOW_TECHNICZNY.md  raport_stanu_projektu.md
infra/k8s/: configmaps.yaml  namespaces.yaml  secrets.yaml
infra/otel-collector/: config.yaml
infra/prometheus/: prometheus.yml
infra/tempo/: tempo.yaml
libs/shared/: README.md  pyproject.toml
libs/shared/shared/: __init__.py  broker.py  config.py  cors.py  database.py  events.py  logging.py  observability.py  rate_limit.py  security.py  tracing.py  worker.py
libs/shared/shared/schemas/: __init__.py  agents.py  base.py  decisions.py  reviews.py  transactions.py
mcp/: ARCHITECTURE_RULES.md  CODEX_CONTEXT.md  CURRENT_STATE.md  GLOSSARY.md
migrations/: env.py
scripts/: demo_seed.py  start_demo.ps1  stop_demo.ps1
services/agent-aggregate/: Dockerfile  (+1 more)
src/: README.md
tests/: README.md  test_contracts.py  test_cors.py  test_demo_seed.py  test_e2e_pipeline.py  test_events.py  test_security_rate_limit.py  test_tracing.py
ui/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
(+122 files in other folders)
